--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .timer {
+        display: flex;
+      }
+    
+      .value {
+        display: block;
+        font-size: 36px;
+      }
+    
+      .field {
+        margin-right: 15px;
+        text-align: center;
+        text-transform: uppercase;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -31,6 +47,6 @@
       </div>
     </div>
 
-    <script src="js/02-timer.js"></script>
+    <script type="module" src="js/02-timer.js"></script>
   </body>
 </html>
